--- a/AUTHORS
+++ b/AUTHORS
@@ -150,6 +150,7 @@ Benjamin Smith			<bsmith@cabbage.org.uk>
 Benjamin Stuhl			<sho_pi@hotmail.com>
 Benjamin Sugars			<bsugars@canoe.ca>
 Bernard Quatermass		<bernard@quatermass.co.uk>
+Bernhard M. Wiedemann			<bwiedemann@suse.de>
 Bill Campbell			<bill@celestial.com>
 Bill Glicker			<billg@burrelles.com>
 Billy Constantine		<wdconsta@cs.adelaide.edu.au>
