--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -129,6 +129,10 @@ L<XXX> has been upgraded from version A.xx to B.yy.
 
 If there was something important to note about this change, include that here.
 
+=item *
+
+L<Encode> has been upgraded from version 3.01 to 3.02.
+
 =back
 
 =head2 Removed Modules and Pragmata
