Add update action to Porting/checkAUTHORS.pl
Fixes #17206

AUTHORS can now be updated by 'Porting/checkAUTHORS.pl' using
the new 'update' action.

Example: perl Porting/checkAUTHORS.pl --update --from=v5.31.6

The changes to the file AUTHORS is better read by ommitting whitespaces.
The changes to AUTHORS are the following:
- authors are sorted
- some emails changed to reflect the preferred email set in the <DATA> section
of checkAUTHORS.pl

When detecting a new author, we will list the GitHub account instead of the email.
Anyone can replace his email by the GitHub account by directly editing AUTHORS file.

Note that the <DATA> section has been adjusted to accomodate several
existing emails in the AUTHORS file to avoid selecting a different email.

'Hio' was listed twice and we preserved the preferred email address.

--- a/Porting/release_managers_guide.pod
+++ b/Porting/release_managers_guide.pod
@@ -508,6 +508,33 @@ release (so for 5.15.3 this would be 5.15.2).  If the last release manager
 followed instructions, this should have already been done after the last
 blead release, so you may find nothing to do here.
 
+=head3 update AUTHORS
+
+AUTHORS file can be updated by running C<Porting/checkAUTHORS.pl --update>
+The script detects missing authors or commiters since the last release using
+a known tag provided by the C<--from=v5.X.Y> argument, and will add missing
+entries to the AUTHORS file.
+
+    $ perl Porting/checkAUTHORS.pl --update --from=v5.X.Y
+
+For MAINT and BLEAD-FINAL releases, C<v5.X.Y> needs to refer to the last
+release in the previous development cycle (so for example, for a 5.14.x
+release, this would be 5.13.11).
+
+BLEAD-POINT releases, it needs to refer to the previous BLEAD-POINT
+release (so for 5.15.3 this would be 5.15.2).
+
+Note: this should not be harmful to use a wider range.
+
+Note: if you have uncommited changes this could cause some warnings,
+and you would like to use the addtional argument C<--to=upstream/blead>
+to use the last known git commit by GitHub.
+
+Review the changes to the AUTHORS file, be sure you are not adding duplicates
+entries or removing some AUTHORS, then commit your changes.
+
+    $ git commit -a AUTHORS -m 'Update AUTHORS list for 5.x.y'
+
 =head3 Check copyright years
 
 Check that the copyright years are up to date by running:
