POSIX::mblen: Make length parameter optional
Now that the typemap is an SV, we can access the length from that.

--- a/ext/POSIX/lib/POSIX.pod
+++ b/ext/POSIX/lib/POSIX.pod
@@ -1093,7 +1093,8 @@ is within the scope of S<C<use locale>>.  Perl makes no attempt at
 hiding from your code any differences in the C<errno> setting between
 C<mblen> and C<mbrlen>.  It does set C<errno> to 0 before calling them.
 
-See L</mblen>.
+The optional second parameter is ignored if it is larger than the
+actual length of the first parameter string.
 
 =item C<mbtowc>
 
