--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -133,6 +133,10 @@ If there was something important to note about this change, include that here.
 
 L<Encode> has been upgraded from version 3.01 to 3.02.
 
+=item *
+
+L<Term::ANSIColor> has been upgraded from version 4.06 to 5.00.
+
 =back
 
 =head2 Removed Modules and Pragmata
