--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -207,7 +207,14 @@ XXX L<message|perldiag/"message">
 
 =item *
 
-XXX L<message|perldiag/"message">
+L<Code point 0x%X is not Unicode, and not portable|perldiag/"Code point 0x%X is not Unicode, and not portable">
+
+This is actually not a new message, but it is now output when the
+warnings category C<portable> is enabled.
+
+=item *
+
+L<message|perldiag/"message">
 
 =back
 
