(toke|regcomp).c: Use common fcn to handle \0 problems
This changes warning messages for too short \0 octal constants to use
the function introduced in the previous commit.  This function assures a
consistent and clear warning message, which is slightly different than
the one this commit replaces.  I know of no CPAN code which depends on
this warning's wording.

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -277,6 +277,14 @@ at the end, when raised during regular expression pattern compilation,
 marking where precisely in the pattern it occured.  In some instances
 the text of the resolution has been clarified.
 
+=item *
+
+L<'%s' resolved to '\o{%s}%d'|perldiag/'%s' resolved to '\o{%s}%d'>
+
+As of Perl 5.32, this message is no longer generated.  Instead,
+L<perldiag/Non-octal character '%c' terminates \o early.  Resolved as "%s">
+is.
+
 =back
 
 =head1 Utility Changes
