--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -391,9 +391,35 @@ Loading IO is now threadsafe.
 
 =head1 Acknowledgements
 
-XXX Generate this with:
+Perl 5.31.8 represents approximately 4 weeks of development since Perl
+5.31.7 and contains approximately 16,000 lines of changes across 400 files
+from 25 authors.
 
-  perl Porting/acknowledgements.pl v5.31.7..HEAD
+Excluding auto-generated files, documentation and release tools, there were
+approximately 8,300 lines of changes to 260 .pm, .t, .c and .h files.
+
+Perl continues to flourish into its fourth decade thanks to a vibrant
+community of users and developers. The following people are known to have
+contributed the improvements that became Perl 5.31.8:
+
+Andy Dougherty, Bernhard M. Wiedemann, Chad Granum, Chase Whitener, Chris
+'BinGOs' Williams, Craig A. Berry, Dan Book, Dan Kogai, David Mitchell,
+Felipe Gasper, Hugo van der Sanden, James E Keenan, Karl Williamson, Matthew
+Horsfall, Nicholas Clark, Nicolas R., Ricardo Signes, Russ Allbery, Santtu
+Ojanperä, Slaven Rezic, Smylers, Todd Rinaldo, Tomasz Konojacki, Tony Cook,
+Yves Orton.
+
+The list above is almost certainly incomplete as it is automatically
+generated from version control history. In particular, it does not include
+the names of the (very much appreciated) contributors who reported issues to
+the Perl bug tracker.
+
+Many of the changes included in this version originated in the CPAN modules
+included in Perl's core. We're grateful to the entire CPAN community for
+helping Perl to flourish.
+
+For a more complete list of all of Perl's historical contributors, please
+see the F<AUTHORS> file in the Perl source distribution.
 
 =head1 Reporting Bugs
 
