Use Unicode 13.0 (beta)
Unicode has changed its yearly release cycle so that the final version
is not available until early March of the year.  This year it is March
10, 2020.

However, all changes planned were finalized in early January, and the
actual computer files have been updated to their presumably final
substantive versions.  The release has been authorized without further
review needed.

The release is awaiting final documentation additions, and soak time of
the beta to verify there are no glitches.  This commit causes Perl to
participate in that soak.

I don't anticipate any problems, and likely the only substantive change
upon the official release will be to update perldelta.  Comments in the
files supplied by Unicode will likely also change to indicate these are
no longer beta.

There were very few changes affecting existing characters; most of the
changes involved adding new characters, including emoji.  The break
characteristics of some existing characters were changed (GCB, LB, WB,
and SB properties).  The only perl code I really had to change to cope
with the new release was about rules in the Line Break property, dealing
around ellipses (...) and certain East Asian characters next to opening
parentheses.

If there are problems, we can revert this at any time, and ship with
12.0.

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -27,6 +27,17 @@ here, but most should go in the L</Performance Enhancements> section.
 
 [ List each enhancement as a =head2 entry ]
 
+=head2 Unicode 13.0 (beta) is supported
+
+Using the beta causes us to participate in the soak cycle for
+Unicode.  Final approval for the existing changes has been made by the
+Unicode consortium, and there are few possibilities that this could
+break existing programs, as there are few changes to already existing
+characters.
+
+Information about the changes is at
+L<https://unicode.org/versions/beta-13.0.0.html>.
+
 =head1 Security
 
 XXX Any security-related notices go here.  In particular, any security
