Clarify when qx/STRING/ returns undef
Fixes #16572.

--- a/pod/perlop.pod
+++ b/pod/perlop.pod
@@ -2341,9 +2341,10 @@ system command with F</bin/sh> or its equivalent.  Shell wildcards,
 pipes, and redirections will be honored.  The collected standard
 output of the command is returned; standard error is unaffected.  In
 scalar context, it comes back as a single (potentially multi-line)
-string, or C<undef> if the command failed.  In list context, returns a
-list of lines (however you've defined lines with C<$/> or
-C<$INPUT_RECORD_SEPARATOR>), or an empty list if the command failed.
+string, or C<undef> if the command could not be executed.  In list
+context, returns a list of lines (however you've defined lines with
+C<$/> or C<$INPUT_RECORD_SEPARATOR>), or an empty list if the command
+could not be executed.
 
 Because backticks do not affect standard error, use shell file descriptor
 syntax (assuming the shell supports this) if you care to address this.
