--- a/pod/perlrun.pod
+++ b/pod/perlrun.pod
@@ -4,7 +4,7 @@ perlrun - how to execute the Perl interpreter
 
 =head1 SYNOPSIS
 
-B<perl>	S<[ B<-sTtuUWX> ]>
+B<perl>	S<[ B<-KsTtuUWX> ]>
 	S<[ B<-hv> ] [ B<-V>[:I<configvar>] ]>
 	S<[ B<-cw> ] [ B<-d>[B<t>][:I<debugger>] ] [ B<-D>[I<number/list>] ]>
 	S<[ B<-pna> ] [ B<-F>I<pattern> ] [ B<-l>[I<octal>] ] [ B<-0>[I<octal/hexadecimal>] ]>
@@ -637,6 +637,15 @@ X<-I> X<@INC>
 
 Directories specified by B<-I> are prepended to the search path for
 modules (C<@INC>).
+
+=item B<-K>
+X<-K>
+
+When present enables a special mode which stops Perl from throwing
+away code in BEGIN blocks so that tools like C<Devel::Cover> can
+see them. This switch may cause a significant increase in memory
+usage, and should only be used in conjunction with a module like
+C<Devel::Cover>. Mnemonic: "Kover mode".
 
 =item B<-l>[I<octnum>]
 X<-l> X<$/> X<$\>
