Support Unicode properties Identifier_(Status|Type)
These non-UCD properties are now being asked to be supported by the
Unicode regular expression specification, UTS #18

These have a slightly different header syntax for giving the version
than UCD files.  In this commit, I modify these to fit, but will
probably have to generalize at some point the parsing of versions in
mktables.

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -38,6 +38,15 @@ characters.
 Information about the changes is at
 L<https://unicode.org/versions/beta-13.0.0.html>.
 
+=head2 New Unicode properties C<Identifier_Status> and C<Identifier_Type> supported
+
+Unicode is in the process of revising its regular expression
+requirements: L<https://www.unicode.org/draft/reports/tr18/tr18.html>.
+As part of that they are wanting more properties to be exposed, ones
+that aren't part of the strict UCD (Unicode character database).  These
+two are used for examining inputs for security purposes.  Details on
+their usage is at L<https://www.unicode.org/reports/tr39/proposed.html>.
+
 =head1 Security
 
 XXX Any security-related notices go here.  In particular, any security
